@@ -5,6 +5,9 @@
 	+ DESTROY is not an autoloaded method anymore
 	+ HasOne fields now may set printable value from the foreign field
 	to set its value
+	+ findId now searchs as well using printableValue
+	+ Bugfix. Minor bug found when key is an IP address in autoloaded
+	methods
 0.11.100
 	+ Bugfix. Fix issue with event filters and empty hashes
 	+ Bugfix. Cache stuff in log and soap watcher to avoid memory leaks
